--- a/Server/FrameSyncServer/FrameSyncServer/FrameSyncServer.csproj
+++ b/Server/FrameSyncServer/FrameSyncServer/FrameSyncServer.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FrameSyncProtocol\FrameSyncProtocol.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="Kcp">
