--- a/Server/FrameSyncServer/FrameSyncProtocol/FrameSyncProtocol.csproj
+++ b/Server/FrameSyncServer/FrameSyncProtocol/FrameSyncProtocol.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <BaseOutputPath>../../../FrameSync/Assets/Scripts/00Common/Libs</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
