--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Server/FrameSyncServer/FrameSyncProtocol/obj/
 Server/FrameSyncServer/FrameSyncProtocol/bin/
 FrameSync/.vs/
 FrameSync/.vsconfig
+Build/
