--- a/FrameSync/Assembly-CSharp.csproj
+++ b/FrameSync/Assembly-CSharp.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Assets\Scripts\04FightLogic\Configs\ResSkillConfigs.cs" />
     <Compile Include="Assets\Scripts\04FightLogic\Configs\SkillCfg.cs" />
     <Compile Include="Assets\Scripts\04FightLogic\Configs\TargetCfg.cs" />
+    <Compile Include="Assets\Scripts\03UIWindow\SkillWnd.cs" />
+    <Compile Include="Assets\Scripts\03UIWindow\SkillItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\00Common\Libs\Debug\netstandard2.0\System.Buffers.dll" />
